Fix CSS annoyances and flickering.

--- a/src/styles/components/misc.scss
+++ b/src/styles/components/misc.scss
@@ -87,3 +87,7 @@
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
+
+.beevenue-Spinner {
+  height: 60px;
+}
